--- a/temp.html
+++ b/temp.html
@@ -1,8 +1,8 @@
    1 .:
    2 total 1544
-   3 drwxrwxr-x  8 ubuntu ubuntu   4096 May  3 17:09 .
+   3 drwxrwxr-x  8 ubuntu ubuntu   4096 May  3 17:20 .
    4 drwxr-xr-x 19 ubuntu ubuntu   4096 May  3 09:16 ..
-   5 drwxrwxr-x  8 ubuntu ubuntu   4096 May  3 10:00 .git
+   5 drwxrwxr-x  8 ubuntu ubuntu   4096 May  3 17:14 .git
    6 -rw-rw-r--  1 ubuntu ubuntu    687 May  3 08:40 .gitignore
    7 drwxrwxr-x  2 ubuntu ubuntu   4096 May  1 11:23 .vscode
    8 -rw-rw-r--  1 ubuntu ubuntu    300 May  3 07:52 Makefile
@@ -10,26 +10,27 @@
   10 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:37 boost_asio_example
   11 -rw-rw-r--  1 ubuntu ubuntu     74 Apr 28 15:53 cgi_server.cpp
   12 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 command
-  13 -rwxrwxr-x  1 ubuntu ubuntu 717648 May  3 17:09 console.cgi
-  14 -rw-rw-r--  1 ubuntu ubuntu   9369 May  3 17:09 console.cpp
-  15 -rwxrwxr-x  1 ubuntu ubuntu 546384 May  3 17:09 http_server
+  13 -rwxrwxr-x  1 ubuntu ubuntu 717648 May  3 17:20 console.cgi
+  14 -rw-rw-r--  1 ubuntu ubuntu   8452 May  3 17:22 console.cpp
+  15 -rwxrwxr-x  1 ubuntu ubuntu 546384 May  3 17:20 http_server
   16 -rw-rw-r--  1 ubuntu ubuntu   4543 May  3 06:55 http_server.cpp
   17 -rwxrwxr-x  1 ubuntu ubuntu 229752 Apr 28 15:37 np_single_golden
   18 -rwxrwxr-x  1 ubuntu ubuntu   2814 May  3 08:51 panel.cgi
   19 -rwxrwxr-x  1 ubuntu ubuntu    344 Apr 28 15:36 printenv.cgi
   20 -rwxrwxr-x  1 ubuntu ubuntu   3183 May  3 06:48 sample_console.cgi
-  21 -rw-rw-r--  1 ubuntu ubuntu      0 May  3 17:10 temp.html
-  22 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 test_case
-  23 
-  24 bin:
-  25 total 344
-  26 drwxrwxr-x 2 ubuntu ubuntu   4096 May  3 15:28 .
-  27 drwxrwxr-x 8 ubuntu ubuntu   4096 May  3 17:09 ..
-  28 -rwxr-xr-x 1 ubuntu ubuntu  43416 May  3 15:28 cat
-  29 -rwxr-xr-x 1 ubuntu ubuntu 142144 May  3 15:28 ls
-  30 -rwxrwxr-x 1 ubuntu ubuntu  17872 May  3 15:28 manyblessings
-  31 -rwxrwxr-x 1 ubuntu ubuntu  16464 May  3 15:28 noop
-  32 -rwxrwxr-x 1 ubuntu ubuntu  23392 May  3 15:28 number
-  33 -rwxrwxr-x 1 ubuntu ubuntu  18472 May  3 15:28 removetag
-  34 -rwxrwxr-x 1 ubuntu ubuntu  18952 May  3 15:28 removetag0
-  35 -rwxr-xr-x 1 ubuntu ubuntu  47456 May  3 15:28 wc
+  21 -rw-rw-r--  1 ubuntu ubuntu      0 May  3 17:23 temp.html
+  22 -rw-rw-r--  1 ubuntu ubuntu      0 May  3 17:23 temp2.html
+  23 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 test_case
+  24 
+  25 bin:
+  26 total 344
+  27 drwxrwxr-x 2 ubuntu ubuntu   4096 May  3 15:28 .
+  28 drwxrwxr-x 8 ubuntu ubuntu   4096 May  3 17:20 ..
+  29 -rwxr-xr-x 1 ubuntu ubuntu  43416 May  3 15:28 cat
+  30 -rwxr-xr-x 1 ubuntu ubuntu 142144 May  3 15:28 ls
+  31 -rwxrwxr-x 1 ubuntu ubuntu  17872 May  3 15:28 manyblessings
+  32 -rwxrwxr-x 1 ubuntu ubuntu  16464 May  3 15:28 noop
+  33 -rwxrwxr-x 1 ubuntu ubuntu  23392 May  3 15:28 number
+  34 -rwxrwxr-x 1 ubuntu ubuntu  18472 May  3 15:28 removetag
+  35 -rwxrwxr-x 1 ubuntu ubuntu  18952 May  3 15:28 removetag0
+  36 -rwxr-xr-x 1 ubuntu ubuntu  47456 May  3 15:28 wc
