--- a/temp.html
+++ b/temp.html
@@ -1,36 +1,43 @@
    1 .:
-   2 total 1688
-   3 drwxrwxr-x  8 ubuntu ubuntu   4096 May  7 07:42 .
-   4 drwxr-xr-x 19 ubuntu ubuntu   4096 May  7 07:37 ..
-   5 drwxrwxr-x  8 ubuntu ubuntu   4096 May  7 07:35 .git
+   2 total 1692
+   3 drwxrwxr-x  8 ubuntu ubuntu   4096 May  8 10:40 .
+   4 drwxr-xr-x 19 ubuntu ubuntu   4096 May  7 07:55 ..
+   5 drwxrwxr-x  8 ubuntu ubuntu   4096 May  8 10:09 .git
    6 -rw-rw-r--  1 ubuntu ubuntu    723 May  7 03:19 .gitignore
    7 drwxrwxr-x  2 ubuntu ubuntu   4096 May  1 11:23 .vscode
    8 -rw-rw-r--  1 ubuntu ubuntu    303 May  6 14:41 Makefile
-   9 drwxrwxr-x  2 ubuntu ubuntu   4096 May  3 15:28 bin
+   9 drwxrwxr-x  2 ubuntu ubuntu   4096 May  8 10:41 bin
   10 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:37 boost_asio_example
   11 -rw-rw-r--  1 ubuntu ubuntu  18102 May  7 07:35 cgi_server.cpp
   12 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 command
-  13 -rwxrwxr-x  1 ubuntu ubuntu 792400 May  7 07:42 console.cgi
-  14 -rw-rw-r--  1 ubuntu ubuntu   8656 May  7 07:42 console.cpp
-  15 -rwxrwxr-x  1 ubuntu ubuntu 599296 May  7 07:42 http_server
+  13 -rwxrwxr-x  1 ubuntu ubuntu 798304 May  8 10:38 console.cgi
+  14 -rw-rw-r--  1 ubuntu ubuntu   7801 May  8 10:37 console.cpp
+  15 -rwxrwxr-x  1 ubuntu ubuntu 599296 May  8 10:37 http_server
   16 -rw-rw-r--  1 ubuntu ubuntu   5099 May  6 15:50 http_server.cpp
   17 -rwxrwxr-x  1 ubuntu ubuntu 229752 Apr 28 15:37 np_single_golden
   18 -rwxrwxr-x  1 ubuntu ubuntu   2814 May  3 08:51 panel.cgi
   19 -rwxrwxr-x  1 ubuntu ubuntu    344 Apr 28 15:36 printenv.cgi
   20 -rwxrwxr-x  1 ubuntu ubuntu   3183 May  3 06:48 sample_console.cgi
-  21 -rw-rw-r--  1 ubuntu ubuntu   1976 May  7 03:21 temp.html
-  22 -rw-rw-r--  1 ubuntu ubuntu      0 May  3 17:23 temp2.html
-  23 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 test_case
-  24 
-  25 bin:
-  26 total 344
-  27 drwxrwxr-x 2 ubuntu ubuntu   4096 May  3 15:28 .
-  28 drwxrwxr-x 8 ubuntu ubuntu   4096 May  7 07:42 ..
-  29 -rwxr-xr-x 1 ubuntu ubuntu  43416 May  3 15:28 cat
-  30 -rwxr-xr-x 1 ubuntu ubuntu 142144 May  3 15:28 ls
-  31 -rwxrwxr-x 1 ubuntu ubuntu  17872 May  3 15:28 manyblessings
-  32 -rwxrwxr-x 1 ubuntu ubuntu  16464 May  3 15:28 noop
-  33 -rwxrwxr-x 1 ubuntu ubuntu  23392 May  3 15:28 number
-  34 -rwxrwxr-x 1 ubuntu ubuntu  18472 May  3 15:28 removetag
-  35 -rwxrwxr-x 1 ubuntu ubuntu  18952 May  3 15:28 removetag0
-  36 -rwxr-xr-x 1 ubuntu ubuntu  47456 May  3 15:28 wc
+  21 -rw-rw-r--  1 ubuntu ubuntu      0 May  8 10:41 temp.html
+  22 -rw-rw-r--  1 ubuntu ubuntu     89 May  8 10:41 temp2.html
+  23 -rw-rw-r--  1 ubuntu ubuntu     86 May  8 10:40 test.html
+  24 drwxrwxr-x  2 ubuntu ubuntu   4096 Apr 28 15:36 test_case
+  25 
+  26 bin:
+  27 total 364
+  28 drwxrwxr-x 2 ubuntu ubuntu   4096 May  8 10:41 .
+  29 drwxrwxr-x 8 ubuntu ubuntu   4096 May  8 10:40 ..
+  30 -rwxr-xr-x 1 ubuntu ubuntu  43416 May  3 15:28 cat
+  31 -rwxrwxr-x 1 ubuntu ubuntu  18656 May  8 10:41 delayedremovetag
+  32 -rwxr-xr-x 1 ubuntu ubuntu 142144 May  3 15:28 ls
+  33 -rwxrwxr-x 1 ubuntu ubuntu  17872 May  3 15:28 manyblessings
+  34 -rwxrwxr-x 1 ubuntu ubuntu  16464 May  3 15:28 noop
+  35 -rwxrwxr-x 1 ubuntu ubuntu  23392 May  3 15:28 number
+  36 -rwxrwxr-x 1 ubuntu ubuntu  18472 May  3 15:28 removetag
+  37 -rwxrwxr-x 1 ubuntu ubuntu  18952 May  3 15:28 removetag0
+  38 -rwxr-xr-x 1 ubuntu ubuntu  47456 May  3 15:28 wc
+  39 
+  40 Test
+  41 This is a test program
+  42 for ras.
+  43 
